@@ -1,43 +1,11 @@
 #!/bin/sh
-# This script will produce or update configure and edelibconf.h.in
-# Also, if option '--dump' is specified, it will produce Jamconfig.in.dump
-
-if [ "$1" = "--dump" ]; then
-	dump=1
-fi
 
 # to save me from typing :P
 if [ "$1" = "--compile" ]; then
 	compile=1
 fi
 
-if [ "$1" = "--compile-optim" ]; then
-	compileopt=1
-fi
-
 if aclocal -I m4 && autoheader && autoconf; then
-	if [ $dump ]; then
-		conffile="Jamconfig.in.dump"
-
-		echo "#" > $conffile
-		echo "# Do not edit this file. Edit configure.in and *.m4 files" >> $conffile 
-		echo "# and run './prepare'" >> $conffile
-		echo "#" >> $conffile
-		echo "" >> $conffile
-
-		# a cool trick from autojam
-		autoconf --trace=AC_SUBST \
-  		| sed -e 's/configure.in:[0-9]*:AC_SUBST:\([^:]*\).*/\1 ?= "@\1@" ;/g' \
-		| sed -e '/ac_*/d' -e '/ECHO_*/d' \
-		| sort -u \
-  		>> $conffile
-
-		echo 'INSTALL_DIR ?= "@INSTALL_DIR@" ;' >> $conffile
-	fi
-
-	# a junk from autoheader
-	rm -f "edelibconf.h.in~"
-
 	echo ""
 	echo "Now run ./configure [OPTIONS]"
 	echo "or './configure --help' to see them"
@@ -45,13 +13,8 @@ if aclocal -I m4 && autoheader && autoconf; then
 	if [ $compile ]; then
 		./configure --enable-debug --prefix=/opt/ede && jam
 	fi
-
-	if [ $compileopt ]; then
-		./configure --prefix=/opt/ede && jam
-	fi
-
 else
 	echo ""
-	echo "We failed :(. There should be some output, right ?"
+	echo "We failed :(. There should be some output, right?"
 	exit 1
 fi
